Fix: align "meus pedidos" with smaller screen

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -50,3 +50,15 @@
   justify-content: center;
   font-weight: bold;
 }
+
+@media screen and (max-width: 600px) {
+.navPedidos {
+  justify-content: center;
+  width: 50%;
+  padding-left: 5px;
+}
+
+.navUser {
+  width: 35%;
+}
+}
